Ability to optionally add line breaks after a field in the view tab

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -1,3 +1,5 @@
+#set($report = $sessionData.getReport())
+<div class="title">$report</div>
 <div id="search">
   <input name="search" type="search">
 </div>
