--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_view.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_view.vm
@@ -69,7 +69,7 @@
           #set($rowCount=0)
           <h2 class="greytext">$field</h2>
         #else
-          #if(($printoutSetting == "NAME_AND_VALUE") && ($fieldCategory != "REFERENCED_REPORT_DATA"))
+          #if((($printoutSetting == "NAME_AND_VALUE") || ($printoutSetting == "NAME_VALUE_LINEBREAK")) && ($fieldCategory != "REFERENCED_REPORT_DATA"))
             <!-- class printoutfieldnamecolumn is only defined when printing - see detail.vm -->
             #if($field.getClass().getSimpleName().equals("RelationFieldDefn"))
               <span class="fieldname">$field.getSimplifiedFieldName()</span>
@@ -77,6 +77,7 @@
               <span class="fieldname">$field</span>
             #end
             : #parse('gui/resources/input/input.vm')
+            #if($printoutSetting == "NAME_VALUE_LINEBREAK")<br>#end
           #else
             #if(($rowCount == 1) && ($printoutSetting == "VALUE_ONLY") && (!$tableDataRow.get($field).isUrl()) && (!$tableDataRow.get($field).isEmailAddress()))
               <b>#parse('gui/resources/input/input.vm')</b>
