--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
@@ -26,8 +26,10 @@
   </title>
   <link type="text/css" href="resources/pane3_amalgam.css" rel="stylesheet" />
   <link type="text/css" href="resources/edit_nav/edit_nav.css" rel="stylesheet" />
+  <link type="text/css" href="resources/edit_nav/slides.css" rel="stylesheet" />
   <script src="resources/jquery.js" language="Javascript"></script>
   <script src="resources/edit_nav/edit_nav.js" language="Javascript"></script>
+  <script src="resources/edit_nav/slides.js" language="Javascript"></script>
 </head>
 <body style="overflow: visible"> ## override tabs.css
   <div id="breadcrumb"></div>
