--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -25,7 +25,10 @@ body {
 .level {
   position: absolute;
   top: 0px;
-  -moz-transition-duration: 0.5s;
+  -moz-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  -ms-transition-duration: 1s;
+  transition-duration: 1s;
   width: 100%;
   height: 610px;
   overflow: visible;
