--- a/gtpb_clientside/resources/edit_nav/slides.css
+++ b/gtpb_clientside/resources/edit_nav/slides.css
@@ -39,14 +39,8 @@
   -webkit-transition: -webkit-transform 1s ease-in-out;
   -moz-transition: -moz-transform 1s ease-in-out;
   -o-transition: -o-transform 1s ease-in-out;
-  transition: transform 1s ease-in-out;
-  
-  /* so it's visible in the iframe. */
-  -webkit-transform: scale(0.8);
-  -moz-transform: scale(0.8);
-  -o-transform: scale(0.8);
-  transform: scale(0.8);
-  
+  -ms-transition: -webkit-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;  
 }
 
 .slide {
@@ -66,10 +60,6 @@
   -moz-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
   -ms-border-radius: 20px;
@@ -122,13 +112,6 @@
 .slide.far-future {
   display: block;
   margin-left: 1500px;
-}
-
-body.three-d div.slides {
-  -webkit-transform: translateX(50px) scale(0.8) rotateY(10deg);
-  -moz-transform: translateX(50px) scale(0.8) rotateY(10deg);
-  -o-transform: translateX(50px) scale(0.8) rotateY(10deg);
-  transform: translateX(50px) scale(0.8) rotateY(10deg);
 }
 
 /* Content */
