-try block text shadow

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -12,7 +12,7 @@ body {
   overflow: hidden;
   color: black;
   background: white;
-  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
 }
 
 #reportDataView .block:hover {
