--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -1,7 +1,7 @@
 #set($report = $sessionData.getReport())
 <div class="title">$report</div>
 <div id="search">
-  <input name="search" type="search">
+  find <input name="search" type="search">
 </div>
 <div id="reportDataView">
   #set($noOutput = true) ## we'll do our own output
