--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -22,10 +22,13 @@ body {
 #search {
   margin-left: 2em;
   margin-top: 0.5em;
+  color: white;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 #search input {
   width: 30em;
+  color: black;
 }
 
 #levels {
