--- a/gtpb_clientside/resources/edit_nav/slides.css
+++ b/gtpb_clientside/resources/edit_nav/slides.css
@@ -129,6 +129,7 @@ footer {
   margin: 20px 0 0 30px;
 }
 
+/*
 a {
   color: inherit;
   display: inline-block;
@@ -136,6 +137,7 @@ a {
   line-height: 110%;
   border-bottom: 2px solid #3f3f3f;
 }
+*/
 
 ul {
   margin: 0;
