--- a/gtpb_clientside/resources/edit_nav/slides.css
+++ b/gtpb_clientside/resources/edit_nav/slides.css
@@ -48,7 +48,7 @@
   position: absolute;
   overflow: hidden;
   width: 900px;
-  height: 600px;
+  min-height: 600px;
   left: 50%;
   top: 50%;
   margin-top: -300px;
@@ -172,9 +172,9 @@ section.small li {
       
 section.middle {
   line-height: 2em;
-  text-align: center;
+  /* text-align: center; */
   display: table-cell;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   height: 600px;
   width: 900px;
 }
