--- a/gtpb_clientside/resources/edit_nav/slides.css
+++ b/gtpb_clientside/resources/edit_nav/slides.css
@@ -25,7 +25,7 @@
   left: 0px;
   top: 0px;
   display: block;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: #bdbdbd; /* 778 */
 }
 
@@ -121,7 +121,7 @@ section, footer {
   text-shadow: rgba(0, 0, 0, 0.2) 0 2px 5px;
   margin: 100px 30px 0;
   display: block;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 footer {
