agileBase edit form: remove leading and trailing cols

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -4,6 +4,7 @@
   <div class="slides"> 
     <div class="slide"> 
       <section class="middle"> 
+        #set($edit_nav = true)
         #parse("gui/reports_and_tables/tabs/edit.vm")
       </section> 
     </div>  
