--- a/gtpb_clientside/resources/edit_nav/slides.css
+++ b/gtpb_clientside/resources/edit_nav/slides.css
@@ -53,9 +53,9 @@
   top: 50%;
   margin-top: -300px;
   background-color: white;
-  /*background: -webkit-gradient(linear, left bottom, left top, from(#bbd), to(#fff));
+  background: -webkit-gradient(linear, left bottom, left top, from(#bbd), to(#fff));
   background: -moz-linear-gradient(bottom, #bbd, #fff);
-  background: linear-gradient(bottom, #bbd, #fff); */
+  background: linear-gradient(bottom, #bbd, #fff);
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
@@ -64,6 +64,10 @@
   -webkit-border-radius: 20px;
   -ms-border-radius: 20px;
   border-radius: 20px;
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
 .slide .counter {
