--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -98,8 +98,6 @@ body {
 }
 
 .slide table#reportData th {
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e6e7ea)); /* for webkit browsers */
-  background: -moz-linear-gradient(top,  #fff,  #e6e7ea); /* for firefox 3.6+ */
-  background: -ms-linear-gradient(top,  #fff,  #e6e7ea);
-  background: linear-gradient(top,  #fff,  #e6e7ea);
+  background: white;
+  border: 0;
 }
