--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -1,7 +1,7 @@
 #set($sessionTable = $sessionData.getTable())
 #set($internalTableName = $sessionTable.getInternalTableName())
 <div class="related block" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&save_new_record=true">
-  <div style="text-align: centre"><img src="resources/toolbar/new.png"></div>
+  <div class="new"><img src="resources/toolbar/new.png"> add new</div>
 </div>
 #foreach($row in $data)
   #set($thisValues = $row.get(0))
