new record card

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -15,6 +15,11 @@ body {
   /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
 }
 
+.block.new {
+  vertical-align: middle;
+  font-size: 14pt;
+}
+
 #reportDataView .block:hover {
   cursor: pointer;
 }
