--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -1,8 +1,7 @@
 #set($sessionTable = $sessionData.getTable())
 #set($internalTableName = $sessionTable.getInternalTableName())
 <div class="related block centrebox" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&save_new_record=true">
-  ##<span class="new"><img src="resources/toolbar/new.png"> add new</span>
-  <textarea>ge</textarea>
+  <span class="new"><img src="resources/toolbar/new.png"> add new</span>
 </div>
 #foreach($row in $data)
   #set($thisValues = $row.get(0))
