--- a/gtpb_clientside/resources/edit_nav/slides.css
+++ b/gtpb_clientside/resources/edit_nav/slides.css
@@ -53,9 +53,13 @@
   top: 50%;
   margin-top: -300px;
   background-color: white;
-  background: -webkit-gradient(linear, left bottom, left top, from(#bbd), to(#fff));
+/*   background: -webkit-gradient(linear, left bottom, left top, from(#bbd), to(#fff));
   background: -moz-linear-gradient(bottom, #bbd, #fff);
-  background: linear-gradient(bottom, #bbd, #fff);
+  background: linear-gradient(bottom, #bbd, #fff); */
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e6e7ea)); /* for webkit browsers */
+  background: -moz-linear-gradient(top,  #fff,  #e6e7ea); /* for firefox 3.6+ */
+  background: -ms-linear-gradient(top,  #fff,  #e6e7ea);
+  background: linear-gradient(top,  #fff,  #e6e7ea);
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
