--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -137,6 +137,10 @@ body {
   text-align: left;
 }
 
+.slide .separator .fieldname {
+  margin-left: 0px;
+}
+
 .slide table#reportData th {
   background: white;
   border: 0;
