Position related tables

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -11,7 +11,7 @@
         <div class="dependent_tables">
           #set($dependentTables = $view.getDirectlyDependentTables($sessionData.getTable()))
           #foreach($dependentTable in $dependentTables)
-            <h1>$dependentTable</h1>
+            <h1>$dependentTable.getSimpleName()</h1>
           #end
         </div>
       </section> 
