--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -139,6 +139,9 @@ body {
 
 .slide .separator .fieldname {
   margin-left: 0px;
+  background: none;
+  position: relative;
+  top: 0.5em;
 }
 
 .slide table#reportData th {
@@ -154,5 +157,5 @@ body {
 .dependent_tables {
   width: 30%;
   float: right;
-  padding-left: 0.2em;
+  padding-left: 1em;
 }
