--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -142,6 +142,7 @@ body {
   background: none;
   position: relative;
   top: 0.5em;
+  text-shadow: none;
 }
 
 .slide .separator span {
@@ -162,4 +163,5 @@ body {
   width: 30%;
   float: right;
   padding-left: 1em;
+  text-shadow: none;
 }
