--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -1,5 +1,5 @@
 #set($report = $sessionData.getReport())
-<div class="title">$report</div>
+<div class="breadcrumb_title">$report</div>
 <div id="search"><input name="search" type="search"> search</div>
 <div id="reportDataView">
   #set($noOutput = true) ## we'll do our own output
