Related slides content: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -1,5 +1,6 @@
 #if(!$report)
   #set($report = $sessionData.getReport())
+  Using session report
 #end
 #if(!$filters)
   #set($reportDataRows = $view.getReportDataRows($report, 100))
