--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -4,13 +4,12 @@
 #else
   #set($reportDataRows = $view.getReportDataRows($report, 100, $filters, true))##
 #end
-Report data rows $reportDataRows
 #set($reportBaseFields = $sessionReport.getReportBaseFields())##
 #set($internalTableName = $report.getParentTable().getInternalTableName())
 <div class="related block centrebox" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&save_new_record=true">
   <span class="new"><img src="resources/toolbar/new.png"> add new</span>
 </div>
-#foreach($row in $ReportDataRows)
+#foreach($row in $reportDataRows)
   #set($thisUniqueId = $row.getRowId())
   #set($emboldened = false)
   <div class="related block current" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&set_row_id=$thisUniqueId">
