--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -1,11 +1,11 @@
 ## $report must be defined
+#set($internalTableName = $report.getParentTable().getInternalTableName())
+#set($reportBaseFields = $report.getReportBaseFields())##
 #if(!$filters)
   #set($reportDataRows = $view.getReportDataRows($report, 100))
 #else
   #set($reportDataRows = $view.getReportDataRows($report, 100, $filters, true))##
 #end
-#set($reportBaseFields = $sessionReport.getReportBaseFields())##
-#set($internalTableName = $report.getParentTable().getInternalTableName())
 <div class="related block centrebox" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&save_new_record=true">
   <span class="new"><img src="resources/toolbar/new.png"> add new</span>
 </div>
