--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -1,6 +1,7 @@
 ## $report must be defined
 #set($internalTableName = $report.getParentTable().getInternalTableName())
 #set($reportBaseFields = $report.getReportBaseFields())##
+Filters are $filters
 #if(!$filters)
   #set($reportDataRows = $view.getReportDataRows($report, 100))
 #else
