Test default report filtering in related tables

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
@@ -27,7 +27,16 @@
         #set($report = $linkingReports.get(0))
       #end
       #set($filters = $viewTools.getNewFilterMap())
-      #set($success = $filters.put($primaryKey, "$sessionRowId"))
+      #if($report.equals($dependentTable.getDefaultReport()))
+        #foreach($field in $report.getReportBaseFields())
+          #if($field.getRelatedTable().equals($sessionTable))
+            #set($success = $filters.put($field, "$sessionRowId"))
+            #break
+          #end
+        #end
+      #else
+        #set($success = $filters.put($primaryKey, "$sessionRowId"))
+      #end
       #parse("gui/edit_nav/report_content.vm")
     </section>
   </div>
