--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -8,7 +8,7 @@ body {
   text-shadow: none;
 }
 
-#reportDataView .block {
+.block {
   margin: 2em;
   float: left;
   width: 250px;
@@ -18,19 +18,19 @@ body {
   /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
 }
 
-#reportDataView .block.current {
+.block.current {
   background: white;
 }
 
-#reportDataView .block .new {
+.block .new {
   font-size: 14pt;
 }
 
-#reportDataView .block .new img {
+.block .new img {
   vertical-align: middle;
 }
 
-#reportDataView .block.centrebox {
+.block.centrebox {
    /* flexbox, por favor */
   display: -webkit-box;
   -webkit-box-orient: horizontal;
@@ -51,7 +51,7 @@ body {
   float: none;
 }
 
-#reportDataView .block:hover {
+.block:hover {
   cursor: pointer;
 }
 
