Block display in related tables

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
@@ -10,7 +10,7 @@
       #set($success = $linkingReports.add($report))
     #end
   #end
-  <div class="slide"> 
+  <div class="slide reportDataView">
     <section class="middle"> 
       <div class="title">
       $dependentTable.getSimpleName()
