--- a/gtpb_clientside/resources/edit_nav/slides.css
+++ b/gtpb_clientside/resources/edit_nav/slides.css
@@ -26,6 +26,7 @@
   top: 0px;
   display: block;
   /* overflow: hidden; */
+  overflow-x: hidden;
   background: #bdbdbd; /* 778 */
 }
 
@@ -130,6 +131,7 @@ section, footer {
   margin: 100px 30px 0;
   display: block;
   /* overflow: hidden; */
+  overflow-x: hidden;
 }
 
 footer {
